--- a/core/package.json
+++ b/core/package.json
@@ -4,7 +4,11 @@
   "main": "index.ts",
   "license": "MIT",
   "devDependencies": {
-    "jest": "^29.7.0"
+    "@babel/preset-typescript": "^7.23.2",
+    "@types/jest": "^29.5.7",
+    "jest": "^29.7.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.0.2"
   },
   "scripts": {
     "test": "jest"
