--- a/core/package.json
+++ b/core/package.json
@@ -6,6 +6,9 @@
   "devDependencies": {
     "@babel/preset-typescript": "^7.23.2",
     "@types/jest": "^29.5.7",
+    "@typescript-eslint/eslint-plugin": "^6.0.0",
+    "@typescript-eslint/parser": "^6.0.0",
+    "eslint": "^8.45.0",
     "jest": "^29.7.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.2"
