--- a/vue/package.json
+++ b/vue/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "game-of-life-core": "file:../core",
     "vue": "^3.2.13"
   },
   "devDependencies": {
